# job_advisor

./: .gitignore  README.md  job_advisor.code-workspace
backend_job_advisor/: .env.example  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend_job_advisor/db/chroma/: README.md
backend_job_advisor/db/elasticsearch/: init_indices.http  init_indices.ps1  job_advisor_facts.json
backend_job_advisor/db/mongodb/: init_collections.js
backend_job_advisor/src/: main.py  test.py
backend_job_advisor/src/agent/: __init__.py  executor.py  plan.py  ports.py  review.py  slot_clarify_rules.py  state.py  triage.py
backend_job_advisor/src/api/: __init__.py  api.py  chat_api.py  fact_api.py  job_api.py  notify_api.py  resume_api.py
backend_job_advisor/src/config/: __init__.py  base_conifg.py  llm_config.py  log_config.py  notify_sse_hub.py
backend_job_advisor/src/constants/: __init__.py  agent_constants.py  attention_level_enum.py  biz_constant.py  fact_predicate_enum.py  fact_status_enum.py  job_source_enum.py  sub_task_status_enum.py  sub_task_type_enum.py  user_job_status_enum.py
backend_job_advisor/src/core/: __init__.py  context.py  id_utils.py  pipeline.py  time_utils.py
backend_job_advisor/src/entity/: __init__.py
backend_job_advisor/src/llm/: __init__.py  clients.py  runtime.py
backend_job_advisor/src/service/: __init__.py  fact_service.py  job_service.py  llm_service.py  resume_service.py
backend_job_advisor/test/: conftest.py  test_fact_domain.py  test_llm_service_extract_facts.py  test_review_fact_confirm_flow.py
docs/: 系统设计文档.md
(+66 files in other folders)
